--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ table, th, td {
   
 }
 a:link {
-  color: purple;
-  background-color: none;
-  text-decoration: underline;
+  color: white;
+  background-color: grey;
+  text-decoration: none;
 }
 
 input {
@@ -43,18 +43,26 @@ input {
   
 }
 ul {
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
-   border: 1px solid #e7e7e7;
-  background-color: #999;
-  
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
 }
 
 li a {
-  color: #666;
-  display: incline;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-li {
-  display: inline;
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
 }
