--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ p{
   margin-right: 10%;
   margin-left: 10%;
   display: block;
-  text-align: left;
+  text-align: center;
   font-size: 150%;
   color: white;
 }
